--- a/UI/assets/css/style.css
+++ b/UI/assets/css/style.css
@@ -10,8 +10,69 @@
 
 html,body{
 	font-size: 14px;
-	font-family: 'Srisakdi','Montserrat', sans-serif, cursive;
+	font-family: 'Montserrat', sans-serif, cursive;
 	font-weight: normal;
 	background: #fff;
+	color: #272727;
+}
+.navbar-brand{
+	font-family: 'Source Code Pro', monospace;
 	color: #000;
+}
+.navbar-brand h3{
+	font-size: 30px;
+}
+.f-source{
+	font-family: 'Source Code Pro', monospace !important;
+}
+.navbar-brand a:hover{
+	color: inherit !important;
+}
+.font-color{ color: #000 !important; }
+.grey-text{ color:#526173 !important; }
+.nav-item{ color: #526173; }
+.hover-link:hover{ color:#b43e6c; }
+.nav-link{ font-size:15px; }
+.nav-link:hover{
+	color: #b43e6c !important;
+	font-weight: bold;
+}
+.banner_img{
+	width: 100%;
+	height: 595px;
+	background-image: url('../images/banner-img.png');
+	background-size: cover;
+	background-repeat: no-repeat;
+}
+.inner-content{
+	text-align: center;
+	padding-top: 15em;
+}
+.inner-content h1{
+	font-size: 52px;
+	letter-spacing: -2.7px !important;
+}
+.mt-64{ margin-top: 64px; }
+.mt-80{margin-top:80px;}
+.f-36{ font-size: 36px; }
+.f-24{ font-size:24px; }
+.fw-500{ font-weight: 500; }
+.inner-content p{
+	font-size: 24px;
+}
+.list-none{ list-style: none; }
+.no-decor:hover{
+	text-decoration: none;
+}
+.bg-grey{
+	background: #f5f5f5;
+}
+.small-hr{
+	border: 1px solid #A66429;
+  	width: 97px;
+  text-align: center;
+  height: 3px;
+  border-radius: 2px;
+  margin: auto;
+  background: #A66429;
 }
